-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.3.0
When in the AndroidManifest.XML editor, We specify the Application Name.
However in the manifest file is is not updated correctly.
Qt refers it to @string/app_name
[code]
<application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="@string/app_name">
<activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation"
android:name="org.qtproject.qt5.android.bindings.QtActivity"
android:label="@string/app_name"
[code]
However what is in "@string/app_name" is the PROJECT name ("project" in "project.pro")
It seems all it needs is to correctly assign @string/app_name.
In order to properly have the name come up in the android launchers, the value of app_name should be set for both the Application AND main Activity.
I manually updated the XML, and verified the activity name is what is shown on the device.
| For Gerrit Dashboard: QTCREATORBUG-13958 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 112527,4 | Android: Add a activity line edit to the AndroidManifest editor | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |