Android: Add a activity line edit to the AndroidManifest editor

And remove code for handling @strings/app_name. The default template
hasn't used that for a while and it's pretty hard to properly support
that with both a activity and app setting.

Change-Id: I394b78e0a5380232efbc52e1c71d49d9696a9b00
Task-number: QTCREATORBUG-13958
Reviewed-by: Alessandro Portale <alessandro.portale@theqtcompany.com>
Reviewed-by: BogDan Vatra <bogdan@kde.org>